<resources>
    <string name="app_name" translatable="false">CarBuddy</string>
    <string name="TextViewUser">Username</string>
    <string name="TextViewPassword">Password</string>
    <string name="Garage">Garage</string>
    <string name="Signup">Sign Up</string>
    <string name="Schedules">Schedules</string>
    <string name="Schedulesappointment">Scheduling Appointment</string>
    <string name="InfoCarro">Vehicle</string>
    <string name="CarExample">Car Example</string>
    <string name="Companies">Companies</string>
    <string name="Company">Company</string>
    <string name="NewAccountTxt">Don\'t have an account?</string>
    <string name="Account">Account</string>
    <string name="About">About</string>
    <string name="Logout">Logout</string>
    <string name="vin" translatable="false">VIN</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="color">Color</string>
    <string name="carType">Car Type</string>
    <string name="displacement">Displacement</string>
    <string name="fuelType">Fuel Type</string>
    <string name="registration">Registration</string>
    <string name="modelYear">Year</string>
    <string name="kilometers">Kilometers</string>
    <string name="repairs">Repairs</string>
    <string name="tVRepairDate">Repair Date</string>
    <string name="ltVRepairType">Repair Type</string>
    <string name="LtvRepairDescp">Repair Description</string>
    <string name="ltVRepairKm">Kilometers</string>
    <string name="ltVRepairState">Repair State</string>
    <string name="Repairs">Repairs</string>
    <string name="delete_confirmation">Are you sure you want to delete this car?</string>
    <string name="Deleted">deleted</string>
    <string name="AddVehicle">New Vehicle</string>
    <string name="Save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="tVUsername">Username</string>
    <string name="tVEmail" translatable="false">E-mail</string>
    <string name="tVNif" translatable="false">NIF</string>
    <string name="tVBirthday">Birthday</string>
    <string name="tVPNumber">Phone Number</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Added">Added</string>
    <string name="NotDeleteCar">You can\'t delete a vehicle with repairs</string>
    <string name="RepeatPassword">Repeat Password</string>
    <string name="Schedule_Date">Schedule Date</string>
    <string name="VehicleRepair">Vehicle Repair</string>
    <string name="Schedule_Description">Description</string>
    <string name="Submit">Submit</string>
    <string name="WriteDescription">Please write a small description.</string>
    <string name="EditVehicle">Edit Vehicle</string>
    <string name="Edited">Edited</string>
    <string name="EditAccount">Edit Account</string>
    <string name="PassDMatch">Passwords doesn\'t match</string>
    <string name="AccountCreated">" Account successfully created"</string>
    <string name="AccountUpdated">" Account successfully updated"</string>
    <string name="Error">Error</string>
    <string name="FailedLogin">Failed login</string>
    <string name="State">State</string>
    <string name="editschedule">Update Schedule</string>
    <string name="EditTextRequired">Required field</string>
    <string name="NoInternet">No internet</string>
    <string name="NoConnection">No connection</string>
    <string name="PasswordMin">The password must be at least 8 characters</string>
    <string name="FieldSpaces">This field cannot contain spaces</string>
    <string name="ValidEmail">Please enter a valid email</string>
    <string name="VinCheck">Please enter a valid vin</string>
    <string name="ValidYear">Please enter a valid year</string>
    <string name="UsernameInUse">Username is already in use</string>
    <string name="EmailInUse">Email is already in use</string>
    <string name="NifInUse">Nif is already in use</string>
    <string name="PhoneNumberInUse">Phone number is already in use</string>
    <string name="VinInUse">Vin is already in use</string>

    <string-array name="fuelType_array">
        <item>Diesel</item>
        <item>Hybrid</item>
        <item>Electric</item>
        <item>Gasoline</item>
    </string-array>

    <string-array name="carType_array">
        <item>Passenger car</item>
        <item>Multipurpose passenger vehicle</item>
        <item>Truck</item>
        <item>Motorcycle</item>
    </string-array>

    <string-array name="repairtype_array">
        <item>Maintenance</item>
        <item>Repair</item>
    </string-array>

</resources>
