<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".models.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roudedconers"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksansbold"
            android:lineSpacingExtra="12sp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:text="@string/tVUsername" />

        <TextView
            android:id="@+id/textViewAccUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans"
            android:layout_marginBottom="8dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:text="" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksansbold"
            android:lineSpacingExtra="12sp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:text="@string/tVEmail" />

        <TextView
            android:id="@+id/textViewAccEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans"
            android:layout_marginBottom="8dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:text="" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksansbold"
            android:lineSpacingExtra="12sp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:text="@string/tVNif" />

        <TextView
            android:id="@+id/textViewNif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans"
            android:layout_marginBottom="8dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:text="" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksansbold"
            android:lineSpacingExtra="12sp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:text="@string/tVBirthday" />

        <TextView
            android:id="@+id/textViewBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans"
            android:layout_marginBottom="8dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:text="" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksansbold"
            android:lineSpacingExtra="12sp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:text="@string/tVPNumber" />

        <TextView
            android:id="@+id/textViewPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans"
            android:layout_marginBottom="8dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:text="" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>